intTests/test_type_errors/unify004.log.good
Loading file "unify004.saw"
Type errors:
  unify004.saw:9:11-9:13: Error: Type mismatch.
    Expected: Int
    Found:    ()

  unify004.saw:8:11-8:14: Note: The type Int arises from this type annotation
  unify004.saw:9:11-9:13: Note: The type () arises from the type of this term


FAILED
