intTests/test_type_errors/unify004.saw
//
// Exercise failure of the unify call in the TyFunc case of the
// Application case of inferExpr. This is the case where we retrieve a
// function type from the environment and then unify its parameters
// with the arguments given.
//

let q (a: Int) () = a;
let x = q () ();


